# ilakkiya

./: .gitignore  API_FIX_COMPLETE.txt  API_MASTER_FIX_TODO.md  AUTO_FILL_TODO.md  COMPANY_CREATE_FIX_TODO.md  COMPANY_USER_PERMISSION_PLAN.md  COMPONENT_CONVERSION_CHECKLIST.md  COMPONENT_UPDATE_STATUS_SUMMARY.md  COMPONENT_UPDATE_SUMMARY.md  DELIVERABLES_SUMMARY.md  DISTRIBUTION_README.md  DOCUMENTATION_INDEX.md  ENTRY_MASTER_CONVERSION_COMPLETE.md  ERP_CONVERSION_TODO.md  ERP_ENTRY_MASTER_IMPLEMENTATION_GUIDE.md  ERP_FINAL_COMPLETION_TODO.md  ERP_FLOW_TODO.md  ERP_FLOW_UPDATE.md  ERP_MODULAR_CONVERSION_TODO.md  ERP_PURCHASE_SMOKE_TEST_CASE.json  ERP_TASK_TODO.md  ERP_UI_STANDARDIZATION_GUIDE.md  ERP_UI_STANDARDIZATION_PLAN.md  EXECUTIVE_SUMMARY.md  EntryTopFrame_fixed.jsx  FIX_API_TODO.md  FIX_COMPANIES_ERROR_TODO.md  FIX_DESKTOP_APP_TODO.md  FIX_LOGIN_TODO.md  FIX_PURCHASE_CRASH_TODO.md  FIX_SUMMARY.md  FIX_TAURI_TODO.md  FULL_TAURI_CONVERSION_TODO.md  FULL_TAURI_INTEGRATION_TODO.md  HTML_TO_REACT_MAPPING.md  IMPLEMENTATION_TODO.md  INSTALLATION_AND_BUILD.md  LOT_IMPLEMENTATION_TODO.md  LOT_SYSTEM_COMPLETE_IMPLEMENTATION_PLAN.md  LOT_SYSTEM_COMPLETION_SUMMARY.md  (+95 more)
Entry/: BVC FO.C.html  BVC FO.D.html  BVC FO.R.D.html  BVC G.D.html  Quotation C.css  advance C.html  advance D.html  open C.html  packing C.html  packing display C.html  papad in C.css  papad in Create.html  papad in D.css  papad in Display.html  sales C.css  (+14 more)
src-tauri/: Cargo.toml  bvc.db  tauri.conf.json
src-tauri/src/: commands.rs  commands_reports.rs  database.rs  lib.rs  lib_new.rs  main.rs  models.rs
(+501 files in other folders)
