[package]
name = "bvc-purchase-management"
version = "1.0.0"
description = "BVC Purchase Management System"
authors = ["BVC Exports Pvt Ltd"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [ "devtools"] }
rusqlite = { version = "0.29", features = ["bundled"] }
bcrypt = "0.15"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
